--- a/starter/index.html
+++ b/starter/index.html
@@ -84,9 +84,9 @@
           </div>
           <h5 class="features__header">100% digital bank</h5>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde alias
-            sint quos? Accusantium a fugiat porro reiciendis saepe quibusdam
-            debitis ducimus.
+            The company itself is a very successful company. Whence the other
+            who are they? Some often reject the accusers by further rejecting
+            them we are leading debts.
           </p>
         </div>
 
@@ -98,9 +98,9 @@
           </div>
           <h5 class="features__header">Watch your money grow</h5>
           <p>
-            Nesciunt quos autem dolorum voluptates cum dolores dicta fuga
-            inventore ab? Nulla incidunt eius numquam sequi iste pariatur
-            quibusdam!
+            But they do not know what the pleasures of pains are when the pains
+            are said to be flight inventor from? There is no incident of his
+            never following this mating to some!
           </p>
         </div>
         <img
@@ -124,9 +124,9 @@
           </div>
           <h5 class="features__header">Free debit card included</h5>
           <p>
-            Quasi, fugit in cumque cupiditate reprehenderit debitis animi enim
-            eveniet consequatur odit quam quos possimus assumenda dicta fuga
-            inventore ab.
+            As it were, he flees into whatever desire he reproves for the debts
+            of his soul It will happen that the consequences are worse than
+            those we can assume the said flight inventor from
           </p>
         </div>
       </div>
@@ -167,10 +167,10 @@
             Tranfser money to anyone, instantly! No fees, no BS.
           </h5>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
+            It's very important to have a patient, but I'm going to have to pay
+            for it At such a time they fall into great labor and pain. For that
+            I will come to the least, who can practice any kind of work except
+            that some of it is useful.
           </p>
         </div>
 
@@ -184,10 +184,9 @@
             Buy a home or make your dreams come true, with instant loans.
           </h5>
           <p>
-            Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-            cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum.
+            Doubts or irure pain in reprimanding in pleasure wants to be let no
+            hair flee from pain Unless they are blind Desires do not go forth;
+            they are in fault who abandon their duties mind that is the work.
           </p>
         </div>
         <div class="operations__content operations__content--3">
@@ -200,10 +199,11 @@
             No longer need your account? No problem! Close it instantly.
           </h5>
           <p>
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-            officia deserunt mollit anim id est laborum. Ut enim ad minim
-            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat.
+            Unless they are blinded by lust, they do not come out, there are
+            those who are in fault they leave their offices and soften their
+            spirits, that is, their labors. For at least Come on, no one should
+            practice any kind of work except as some kind of ex it is a good
+            idea.
           </p>
         </div>
       </div>
@@ -222,12 +222,13 @@
           <div class="testimonial">
             <h5 class="testimonial__header">Best financial decision ever!</h5>
             <blockquote class="testimonial__text">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Accusantium quas quisquam non? Quas voluptate nulla minima
-              deleniti optio ullam nesciunt, numquam corporis et asperiores
-              laboriosam sunt, praesentium suscipit blanditiis. Necessitatibus
-              id alias reiciendis, perferendis facere pariatur dolore veniam
-              autem esse non voluptatem saepe provident nihil molestiae.
+              If the customer is very smart, he or she will be able to achieve
+              the desired result. Accusers that no one? This pleasure is not the
+              least the gentle know no choice, never the physical and the
+              rougher they are laborious, they receive the flattery of those
+              present. Necessities To do this by rejecting others, by putting up
+              with them, is to forgive the pain but they often provide no
+              trouble to be without pleasure.
             </blockquote>
             <address class="testimonial__author">
               <img src="img/user-1.jpg" alt="" class="testimonial__photo" />
@@ -243,11 +244,11 @@
               The last step to becoming a complete minimalist
             </h5>
             <blockquote class="testimonial__text">
-              Quisquam itaque deserunt ullam, quia ea repellendus provident,
-              ducimus neque ipsam modi voluptatibus doloremque, corrupti
-              laborum. Incidunt numquam perferendis veritatis neque repellendus.
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo
-              deserunt exercitationem deleniti.
+              Whoever, therefore, abandons any, because they provide that they
+              should be repulsed, we do not lead the way itself to pleasures and
+              pains, being corrupted snacks They never fail to bear the truth
+              nor to be repelled. Hello, it's really a pain to be followed. To
+              him they abandon the exercise of the gentle.
             </blockquote>
             <address class="testimonial__author">
               <img src="img/user-2.jpg" alt="" class="testimonial__photo" />
@@ -263,12 +264,12 @@
               Finally free from old-school banks
             </h5>
             <blockquote class="testimonial__text">
-              Debitis, nihil sit minus suscipit magni aperiam vel tenetur
-              incidunt commodi architecto numquam omnis nulla autem,
-              necessitatibus blanditiis modi similique quidem. Odio aliquam
-              culpa dicta beatae quod maiores ipsa minus consequatur error sunt,
-              deleniti saepe aliquid quos inventore sequi. Necessitatibus id
-              alias reiciendis, perferendis facere.
+              Debts, nothing less takes a big opening or is held they fall to
+              the advantage of the architect, never all, but none and the like,
+              indeed, by means of flattery I hate some the fault of the
+              so-called blessed, that the elders themselves have less success,
+              is an error, they often follow something they discover. That's
+              what you need others by rejecting, by bearing.
             </blockquote>
             <address class="testimonial__author">
               <img src="img/user-3.jpg" alt="" class="testimonial__photo" />
